force-app/main/default/objects/Showroom_Installation__c/Showroom_Installation__c.object-meta.xml
<CustomObject>
    <label>Showroom Installation</label>
    <nameField>
        <displayFormat>SHINS-{000000}</displayFormat>
        <label>Showroom Installation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Showroom Installations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>