force-app/main/default/objects/Showroom_Installation__c/fields/Customer_Purchased_Materials__c.field-meta.xml
<CustomField>
    <fullName>Customer_Purchased_Materials__c</fullName>
    <inlineHelpText>The cost of materials purchased from LTD by the customer for the showroom installation</inlineHelpText>
    <label>Customer Purchased Materials</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>