force-app/main/default/objects/Showroom_Installation__c/fields/Install_Location__c.field-meta.xml
<CustomField>
    <fullName>Install_Location__c</fullName>
    <label>Install Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Back-splash</fullName>
            </value>
            <value>
                <fullName>Floor</fullName>
            </value>
            <value>
                <fullName>Shower</fullName>
            </value>
            <value>
                <fullName>Vignette</fullName>
            </value>
            <value>
                <fullName>Wall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>