force-app/main/default/objects/Showroom_Installation__c/fields/Install_Method__c.field-meta.xml
<CustomField>
    <fullName>Install_Method__c</fullName>
    <inlineHelpText>Type of installation (on slab, tar paper, on backerboard, etc.). Provide as much detail as possible.</inlineHelpText>
    <label>Install Method</label>
    <type>TextArea</type>
</CustomField>