force-app/main/default/objects/Showroom_Installation__c/fields/LTD_Provided_Materials__c.field-meta.xml
<CustomField>
    <fullName>LTD_Provided_Materials__c</fullName>
    <inlineHelpText>The cost of materials donated at no charge by LTD for the customer&apos;s showroom installation</inlineHelpText>
    <label>LTD Provided Materials</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>