force-app/main/default/objects/Showroom_Installation__c/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Is the showroom installation related to a marketing campaign?</inlineHelpText>
    <label>Marketing Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Showroom Installations</relationshipLabel>
    <relationshipName>Showroom_Installations</relationshipName>
    <type>Lookup</type>
</CustomField>